<resources>
    <string name="app_name">LAMMAS 20</string>
    <string name="department_of_computer_application">Organized by\n PG Department of Computer Application</string>
    <string name="lammas_2020">LAMMAS "'"2020</string>
    <string name="_01_january_2020">06&amp;07-February-2020</string>
    <string name="welcome_you_all">WELCOME YOU ALL</string>
    <string name="events_list">Events list</string>
    <string name="events_list_bar">Events List</string>
    <string name="todo">TODO</string>
    <string name="intra_departmental_cultural_competition">Inter Departmental Cultural Competition</string>
    <string name="solo_dance">Solo Dance</string>
    <string name="face_painting">Face Painting</string>
    <string name="short_film">Short Film</string>
    <string name="group_dance">Group Dance</string>
    <string name="mime">Mime</string>
    <string name="dumb_c">Tin Tarento</string>
    <string name="pair_dance">Pair Dance</string>
    <string name="light_music">Light Music</string>
    <string name="street_play">Street Play</string>
    <string name="art_out_of_waste">Art out of Waste</string>
    <string name="bride_bridegroom_dressing">Bride / Bridegroom Dressing</string>
    <string name="pencil_sketch">Pencil sketch</string>
    <string name="vegetable_carving">Vegetable Carving</string>
    <string name="photo_shoot">Photo Shoot</string>
    <string name="pongal">Pongal</string>
    <string name="event_detail">Event Detail</string>
    <string name="_10_a_m">10 a.m</string>
    <string name="timing">Timing</string>
    <string name="rules">Rules</string>
    <string name="event_type_solo_event_nvenue_auditorium">Event Type : Solo Event  , Venue : Auditorium</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_11_30_a_m">11.30 a.m</string>
    <string name="event_type_solo_event_nvenue_tb_2">Event Type : Solo Event  , Venue : TB 2</string>
    <string name="_12_30_p_m">12.30 p.m</string>
    <string name="event_type_solo_event_nvenue_tb_7">Event Type : Solo Event  , Venue : TB 7</string>
    <string name="_2_p_m">2 p.m</string>
    <string name="event_type_solo_event_nvenue_tb_9">Event Type : Solo Event  , Venue : TB 9</string>
    <string name="event_type_solo_event_nvenue_tb_6">Event Type : Solo Event  , Venue : TB 6</string>
    <string name="event_type_solo_event_nvenue_tb_1">Event Type : Solo Event  , Venue : TB 1</string>
    <string name="event_type_solo_event_nvenue_tb_14">Event Type : Solo Event  , Venue : TB 14</string>
    <string name="event_type_group_event_nvenue_coconut_groove">Event Type : Group Event  , Venue : Coconut Groove</string>
    <string name="event_type_group_event_nvenue_fr_m_a_ratchakar_hall">Event Type : Group Event  , Venue : Fr. M.A.Ratchakar Hall</string>
    <string name="_11_a_m">11 a.m</string>
    <string name="_1_p_m">1 p.m</string>
    <string name="_12_p_m">12 p.m</string>
    <string name="event_type_group_event_nvenue_auditorium">Event Type : Group Event  , Venue : Auditorium</string>
    <string name="event_type_group_event_nvenue_library_annex_hall_ground_floor">Event Type : Group Event  , Venue : Library Annex Hall (Ground Floor)</string>
    <string name="event_type_group_event_nvenue_tb_block_stage">Event Type : Group Event  , Venue : TB BLOCK STAGE</string>
    <string name="no_of_participant_1">No. of Participant : 1</string>
    <string name="duration_45_minutes">Duration : 45 Minutes</string>
    <string name="participant_should_bring_all_the_essentials">Participant should bring all the essentials.</string>
    <string name="theme_will_be_given_on_the_spot">Theme will be given on the spot.</string>
    <string name="a4_sheet_will_be_provided">A4 Sheet will be provided</string>
    <string name="participant_can_be_accompanied_by_one_student_can_be_bride_or_bridegroom_model_and_should_bring_all_the_essential_materials">Participant can be accompanied by one student (can be Bride or Bridegroom model) and should bring all the essential materials.</string>
    <string name="participants_should_bring_digital_camera">Participants should bring Digital Camera</string>
    <string name="participants_should_bring_vegetables_and_essential_materials">Participants should bring Vegetables and essential materials</string>
    <string name="pre_carved_vegetables_leads_to_disqualification_of_the_participant">Pre-Carved Vegetables leads to disqualification of the participant.</string>
    <string name="team_size_6_8">Team Size : 6–8</string>
    <string name="duration_1_hour">Duration : 1 Hour</string>
    <string name="participants_should_exhibit_the_traditional_spirit_of_pongal_pongal_set">Participants should exhibit the traditional spirit of pongal (Pongal Set).</string>
    <string name="pre_cooked_dishes_are_not_allowed">Pre-cooked dishes are not allowed.</string>
    <string name="judgment_will_be_based_on_decorations_taste_garnishing_and_number_of_dishes">Judgment will be based on Decorations, Taste, Garnishing and number of dishes.</string>
    <string name="film_duration_4_to_5_minutes">Film Duration : 4 to 5 Minutes</string>
    <string name="theme_unity_is_strength">Theme: Unity is Strength</string>
    <string name="shooting_of_the_film_should_be_done_before_the_judge_and_editing_can_be_done_in_the_next_20_minutes_and_should_be_submitted_to_the_judge_s_whatsapp_number">Shooting of the film should be done before the judge and editing can be done in the next 20 minutes and should be submitted to the judge’s whatsapp number.</string>
    <string name="duration_6_to_7_minutes">Duration : 6 to 7 Minutes</string>
    <string name="background_score_any_song">Background Score : Any song.</string>
    <string name="the_act_should_not_contain_any_dialogues_and_properties_background_music_is_only_allowed_no_dialogues_or_songs_in_the_background_is_allowed">The act should not contain any dialogues and properties. (Background Music is only allowed, No Dialogues or Songs in the background is allowed.)</string>
    <string name="theme_human_values">Theme: Human Values</string>
    <string name="team_size_3">Team Size : 3</string>
    <string name="duration_60_sec">Duration : 60 sec.</string>
    <string name="answers_should_be_yes_no_or_maybe">Answers should be Yes, No or Maybe</string>
    <string name="question_could_be_related_to_places_monuments_personalities_and_movies">Question could be related to places, monuments, personalities and movies.</string>
    <string name="team_size_2">Team Size : 2</string>
    <string name="duration_4_to_5_minutes">Duration : 4 to 5 Minutes</string>
    <string name="boy_amp_boy_for_shift_i_girl_amp_girl_for_shift_ii"><![CDATA[[(Boy&Boy) for shift-I] [(Girl&Girl) for shift-II]]]></string>
    <string name="duration_5_to_7_minutes">Duration : 5 to 7 Minutes</string>
    <string name="any_songs">Any Songs.</string>
    <string name="theme_global_warming">Theme: Global Warming</string>

</resources>
