<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventList.Event1Activity">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:id="@+id/eventImage"
                android:scaleType="centerCrop"
                android:contentDescription="@string/todo"/>


            <ImageView
                android:id="@+id/backArrow"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:tint="@color/white_"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/ic_back2"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/todo"/>
        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/photo_shoot"
                    android:layout_marginTop="4dp"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="8dp"
                        android:layout_height="8dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="4dp"
                        android:src="@drawable/dark_circle_red"
                        android:layout_marginEnd="4dp"
                        android:contentDescription="@string/todo"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#a0a0a0"
                        android:textSize="17sp"
                        android:layout_marginLeft="7dp"
                        android:text="@string/timing"
                        android:layout_marginStart="7dp" />

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:src="@drawable/ic_clock1"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_2_p_m"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp" />
                </LinearLayout>



            </LinearLayout>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_detail"
            android:textSize="10sp"
            android:textColor="@color/black"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:lineSpacingExtra="2dp"
            android:text="@string/event_type_solo_event_nvenue_tb_14"
            android:layout_margin="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rules"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:text="@string/_1"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/white_"
                        android:background="@drawable/dark_circle_sky"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_of_participant_1"
                        android:textSize="13sp"
                        android:layout_marginLeft="15dp"
                        android:layout_gravity="center"
                        android:textColor="#585e66"
                        android:layout_marginStart="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:text="@string/_2"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/white_"
                        android:background="@drawable/dark_circle_green"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/duration_45_minutes"
                        android:textSize="13sp"
                        android:layout_gravity="center"
                        android:textColor="#585e66"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:text="@string/_3"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/white_"
                        android:background="@drawable/dark_circle_red"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/participants_should_bring_digital_camera"
                        android:textSize="13sp"
                        android:layout_marginLeft="15dp"
                        android:layout_gravity="center"
                        android:textColor="#585e66"
                        android:layout_marginStart="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:text="@string/_4"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/white_"
                        android:background="@drawable/dark_circle_grey"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/theme_will_be_given_on_the_spot"
                        android:textSize="13sp"
                        android:layout_marginLeft="15dp"
                        android:layout_gravity="center"
                        android:textColor="#585e66"
                        android:layout_marginStart="15dp" />


                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>
