<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".WelcomeActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:src="@drawable/splash_logo"
        android:contentDescription="@string/todo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="#5CECE4E4"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <TextView
        android:id="@+id/t1L"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="45dp"
        android:gravity="center"
        android:textStyle="bold"
        android:paddingBottom="10dp"
        android:text="@string/lammas_2020"
        android:textColor="@color/white_"
        android:textSize="28sp" />


            <TextView
                android:id="@+id/t1I"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_alignTop="@+id/t1L"
                android:layout_marginTop="35dp"
                android:layout_marginRight="40dp"
                android:paddingTop="10dp"
                android:textStyle="bold"
                android:paddingBottom="10dp"
                android:text="@string/intra_departmental_cultural_competition"
                android:textAlignment="center"
                android:textColor="@color/white_"
                android:textSize="20sp" />
    <TextView
        android:id="@+id/t1D"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_alignTop="@+id/t1I"
        android:layout_marginTop="54dp"
        android:layout_marginRight="40dp"
        android:paddingTop="10dp"
        android:textStyle="bold"
        android:paddingBottom="10dp"
        android:text="@string/department_of_computer_application"
        android:textAlignment="center"
        android:textColor="@color/white_"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/t1J"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="79dp"
        android:layout_marginRight="45dp"
        android:paddingTop="10dp"
        android:layout_alignTop="@+id/t1D"
        android:paddingBottom="10dp"
        android:textStyle="bold"
        android:text="@string/_01_january_2020"
        android:textAlignment="center"
        android:textColor="@color/white_"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tlW"
        android:layout_alignTop="@+id/t1J"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="39dp"
        android:layout_marginRight="45dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textStyle="bold"
        android:text="@string/welcome_you_all"
        android:textAlignment="center"
        android:textColor="@color/white_"
        android:textSize="27sp" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/event_button"
        android:text="@string/events_list"
        android:gravity="center"
        android:textStyle="italic"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/tlW"
        android:onClick="eventList"
        android:layout_marginTop="80dp"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:textColor="@color/white_"
        android:textSize="19sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>